--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -10,12 +10,6 @@
   transition: transform 0.3s ease;
 }
 
-.backMenu .all-menu p:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  transition: all 0.3s ease;
-}
-
 .all-menu {
   position: fixed;
   z-index: 4;
@@ -37,8 +31,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 0 2rem;
-  margin: 0;
 }
 
 .backMenu .all-menu .all-menu-list li:first-child {
@@ -54,7 +46,7 @@
 
 .backMenu .all-menu .all-menu-list li:hover {
   transform: scale(1.1);
-  transition: all 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .backMenu .all-menu .all-menu-list li.bookmarks a {
@@ -98,6 +90,11 @@
   cursor: pointer;
 }
 
+.header .name-mode-menu h4:hover {
+  transform: rotate(-3deg);
+  transition: all 0.3s ease;
+}
+
 .header .name-mode-menu a button {
   font-family: 'Montserrat', sans-serif;
   border: none;
@@ -132,7 +129,7 @@
 
 .header .name-mode-menu .mode-menu p:hover {
   transform: scale(1.1);
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .header .name-mode-menu .mode-menu .menu {
