--- a/client/src/components/ImageInfo/ImageInfo.css
+++ b/client/src/components/ImageInfo/ImageInfo.css
@@ -28,10 +28,11 @@
   cursor: pointer;
   margin-top: 0.5rem;
   box-shadow: 1px 1px 5px #000;
+  letter-spacing: 1px;
 }
 
 .info .img-more-info .img-rating #add:hover {
-  background: rgb(147, 218, 67);
+  background: rgb(108, 203, 0);
   transition: all 0.3s ease;
 }
 
@@ -52,7 +53,7 @@
 }
 
 .info .img-more-info .img-rating #remove:hover {
-  background: rgb(255, 63, 63);
+  background: rgb(255, 51, 51);
   transition: color 0.3s ease;
 }
 
