--- a/client/src/components/MovieCard/MovieCard.css
+++ b/client/src/components/MovieCard/MovieCard.css
@@ -7,8 +7,7 @@
 
 .one-movie:hover {
   box-shadow: 2px 2px 10px;
-  transform: scale(1.03);
-  transition: transform 0.3s ease;
+  transition: box-shadow 0.3s ease;
 }
 
 .one-movie .img-rating {
@@ -86,7 +85,7 @@
 }
 
 .one-movie .movie-info .rating-bookmark #add:hover {
-  background: rgb(147, 218, 67);
+  background: rgb(108, 203, 0);
   transition: color 0.3s ease;
 }
 
@@ -106,7 +105,7 @@
 }
 
 .one-movie .movie-info .rating-bookmark #remove:hover {
-  background: rgb(255, 79, 79);
+  background: rgb(255, 51, 51);
   transition: color 0.3s ease;
 }
 
