--- a/client/src/pages/Movies/Movies.css
+++ b/client/src/pages/Movies/Movies.css
@@ -1,14 +1,16 @@
 .cat-genre {
   display: flex;
+  align-items: flex-end;
   justify-content: space-around;
   max-width: 1280px;
   margin: 0 auto;
   padding: 4rem 1rem;
-  padding-bottom: 0rem;
+  padding-bottom: 2rem;
 }
 
 .category {
   text-transform: uppercase;
+  margin: 0;
 }
 
 .more {
@@ -88,6 +90,7 @@
 @media screen and (max-width: 640px) {
   .cat-genre {
     padding-top: 3.5rem;
+    padding-bottom: 0rem;
   }
 
   .all {
