--- a/client/src/components/Filtered/Filtered.css
+++ b/client/src/components/Filtered/Filtered.css
@@ -1,2 +1,27 @@
-.filtered {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
+
+.filtered .select {
+  padding: 0.1rem 0.3rem;
+  margin: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.filtered .select:focus {
+  outline: none;
+}
+
+.filterDark {
+  border: 3px solid #001124;
+  background: #001124;
+  color: #fff;
+}
+
+.filterLight {
+  border: 3px solid #fff;
+  background: #fff;
+  color: #001124;
 }
