--- a/client/src/components/Filtered/Filtered.css
+++ b/client/src/components/Filtered/Filtered.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
 
+.filtered i {
+  margin-right: 0.5rem;
+}
+
 .filtered .select {
-  padding: 0.1rem 0.3rem;
+  padding: 0rem 0.3rem;
   margin: 0;
   border-radius: 3px;
   cursor: pointer;
@@ -15,13 +19,21 @@
 }
 
 .filterDark {
-  border: 3px solid #001124;
-  background: #001124;
+  border: 3px solid #0d253f;
+  background: #0d253f;
   color: #fff;
 }
 
 .filterLight {
   border: 3px solid #fff;
   background: #fff;
-  color: #001124;
+  color: #0d253f;
+}
+
+.iconDark {
+  color: #0d253f;
+}
+
+.iconWhite {
+  color: #fff;
 }
