--- a/client/src/components/Filtered/Filtered.css
+++ b/client/src/components/Filtered/Filtered.css
@@ -30,7 +30,6 @@
   margin: 0;
   padding: 0;
   letter-spacing: 0.5px;
-  cursor: pointer;
   font-weight: 500;
   position: relative;
   min-width: 200px;
@@ -39,6 +38,7 @@
 }
 
 .dropdown .dropdown-btn {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -49,33 +49,29 @@
   position: absolute;
   z-index: 2;
   top: 110%;
-  padding: 5px 10px;
   box-sizing: border-box;
   width: 100%;
   border-radius: 3px;
 }
 
 .dropdown .dropdown-content .dropdown-item {
+  margin: 10px 0;
   padding: 0;
-  margin: 8px 2px;
+  padding: 0px 10px;
   cursor: pointer;
 }
 
 .dropdown .dropdown-content .dropdown-item:hover {
-  padding: 0;
-  padding-left: 5px;
-  border-left: 5px solid #fff;
-  transition: all 0.3s ease;
+  padding-left: 20px;
+  transition: padding-left 0.3s ease;
 }
 
 .filterDark {
-  /*border: 3px solid #0d253f;*/
   background: #0d253f;
   color: #fff;
 }
 
 .filterLight {
-  /*border: 3px solid #fff;*/
   background: #fff;
   color: #0d253f;
 }
