--- a/client/src/components/Filtered/Filtered.css
+++ b/client/src/components/Filtered/Filtered.css
@@ -31,10 +31,11 @@
   padding: 0;
   letter-spacing: 0.5px;
   font-weight: 500;
-  position: relative;
-  min-width: 200px;
+  width: 150px;
   border-radius: 3px;
   user-select: none;
+  position: relative;
+  margin-right: 1rem;
 }
 
 .dropdown .dropdown-btn {
@@ -42,7 +43,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 10px;
+  padding: 2px 10px;
 }
 
 .dropdown .dropdown-content {
@@ -50,8 +51,9 @@
   z-index: 2;
   top: 110%;
   box-sizing: border-box;
-  width: 100%;
+  width: 150px;
   border-radius: 3px;
+  box-shadow: 0px 0px 10px #000;
 }
 
 .dropdown .dropdown-content .dropdown-item {
