--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -2,18 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 5rem;
 }
 
 .paginationItem {
-  background: #fff;
-  border: 2px solid #666;
-  padding: 10px 15px;
-  border-radius: 50%;
-  height: 45px;
+  border: none;
+  height: 25px;
   width: 45px;
   position: relative;
   margin: 0 5px;
   cursor: pointer;
+  border-radius: 20px;
 }
 
 .paginationItem span {
@@ -21,13 +20,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-weight: bold;
 }
 
 .prev,
 .next {
   background: #fff;
   border: none;
-  padding: 10px;
   color: blue;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
   margin: 0 10px;
@@ -45,4 +44,28 @@
   pointer-events: none;
   box-shadow: none;
   color: #999;
+}
+
+.darkActive {
+  background: #fff;
+  border: 2px solid #0d253f;
+  color: #0d253f;
+  pointer-events: none;
+}
+
+.lightActive {
+  background: #0d253f;
+  border: 2px solid #fff;
+  color: #fff;
+  pointer-events: none;
+}
+
+.darkNumber {
+  background: #0d253f;
+  color: #fff;
+}
+
+.lightNumber {
+  background: #fff;
+  color: #0d253f;
 }
