--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -23,12 +23,19 @@
   font-weight: bold;
 }
 
-.prev,
-.next {
-  background: #fff;
+.prevNextDark {
   border: none;
-  color: blue;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+  color: #0d253f;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.prevNextLight {
+  background: #0d253f;
+  border-radius: 50%;
+  border: none;
+  color: #fff;
   margin: 0 10px;
   cursor: pointer;
 }
@@ -39,11 +46,13 @@
   pointer-events: none;
 }
 
-.prev.disabled,
-.next.disabled {
+.disabled {
   pointer-events: none;
   box-shadow: none;
   color: #999;
+  border-radius: 50%;
+  border: 1px solid #888;
+  margin: 0 10px;
 }
 
 .darkActive {
