--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -51,7 +51,7 @@
   box-shadow: none;
   color: #999;
   border-radius: 50%;
-  border: 1px solid #888;
+  border: none;
   margin: 0 10px;
 }
 
@@ -77,4 +77,17 @@
 .lightNumber {
   background: #fff;
   color: #0d253f;
+}
+
+@media screen and (max-width: 640px) {
+  .paginationItem {
+    height: 25px;
+    width: 25px;
+  }
+
+  .prevNextDark,
+  .prevNextLight,
+  .disabled {
+    font-size: 0.75rem;
+  }
 }
