--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -1,8 +1,12 @@
 .pagination {
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 5rem;
+  padding: 0.6rem;
+  background: #fff;
 }
 
 .paginationItem {
@@ -64,6 +68,14 @@
   border-radius: 50%;
   border: none;
   margin: 0 10px;
+}
+
+.dbg {
+  background: #0d253f;
+}
+
+.lbg {
+  background: #fff;
 }
 
 .darkActive {
