--- a/client/src/components/MovieCard/MovieCard.css
+++ b/client/src/components/MovieCard/MovieCard.css
@@ -55,14 +55,14 @@
   position: absolute;
   display: flex;
   flex-direction: row;
+  align-items: flex-start;
   justify-content: space-between;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .one-movie .movie-info .title-year .year {
-  padding: 2px 6px;
-  border-radius: 3px;
   margin-left: 1rem;
+  font-weight: 500;
 }
 
 .one-movie .movie-info .rating-bookmark {
@@ -115,14 +115,17 @@
 
 .green {
   background: green;
+  box-shadow: 1px 1px 0px #000;
 }
 
 .orange {
   background: orange;
+  box-shadow: 1px 1px 0px #000;
 }
 
 .red {
   background: tomato;
+  box-shadow: 1px 1px 0px #000;
 }
 
 @media screen and (max-width: 786px) {
