--- a/client/src/pages/Bookmarks/Bookmarks.css
+++ b/client/src/pages/Bookmarks/Bookmarks.css
@@ -35,6 +35,8 @@
   justify-content: center;
   max-width: 1280px;
   margin: 0 auto;
+  border-radius: 3px;
+  padding-bottom: 7rem;
 }
 
 .blackMovies {
@@ -61,13 +63,6 @@
   color: rgb(240, 244, 248);
 }
 
-@media screen and (max-width: 786px) {
-  .all .one-movie {
-    width: 150px;
-    margin: 0.5rem;
-  }
-}
-
 @media screen and (max-width: 640px) {
   .cat-genre {
     padding-top: 3.5rem;
@@ -81,9 +76,5 @@
 
   .all {
     width: 100vw;
-  }
-
-  .all .one-movie {
-    margin: 0.5rem;
   }
 }
