--- a/client/src/components/MovieCard/MovieCard.css
+++ b/client/src/components/MovieCard/MovieCard.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   border-radius: 3px;
   width: 250px;
-  margin: 1rem;
+  margin: 1rem 1rem;
 }
 
 .one-movie:hover {
@@ -23,6 +23,7 @@
 
 .one-movie .img-rating img {
   width: 232px;
+  width: 100%;
   display: block;
   object-fit: cover;
   border-radius: 3px;
@@ -128,23 +129,21 @@
   box-shadow: 1px 1px 0px #000;
 }
 
-@media screen and (max-width: 786px) {
+@media screen and (max-width: 1280px) {
+  .one-movie {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
   .one-movie {
     width: 200px;
   }
+}
 
-  .one-movie .img-rating span {
-    font-size: 0.7rem;
-    padding: 0.1rem;
-    width: 30px;
-  }
-
-  .one-movie .img-rating img {
-    width: 138px;
-  }
-
-  .one-movie .movie-info h5 {
-    font-size: 0.6rem;
+@media screen and (max-width: 786px) {
+  .one-movie {
+    width: 200px;
   }
 }
 
@@ -170,4 +169,15 @@
 
 .lightBg {
   background: #fff;
+}
+
+@media screen and (max-width: 640px) {
+  .one-movie {
+    width: 160px;
+    margin: 0.5rem;
+  }
+
+  .one-movie .movie-info h5 {
+    font-size: 0.7rem;
+  }
 }
