--- a/client/src/components/Person/Person.css
+++ b/client/src/components/Person/Person.css
@@ -45,6 +45,8 @@
   padding: 0.1rem 0.3rem;
   border-radius: 3px;
   cursor: pointer;
+  font-weight: bold;
+  font-weight: bold;
 }
 
 .person-img {
