--- a/client/src/components/PersonDetail/PersonDetail.css
+++ b/client/src/components/PersonDetail/PersonDetail.css
@@ -59,10 +59,10 @@
 .full-detail .person-detail .bio h4 {
   line-height: 2rem;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   .full-detail .person-detail {
     display: flex;
     flex-direction: column;
@@ -70,8 +70,8 @@
 
   .full-detail .person-detail .bio h4 {
     margin: 1rem;
-    font-size: 0.9rem;
-    line-height: 1.6rem;
+    font-size: 1rem;
+    line-height: 1.8rem;
   }
 
   .full-detail .person-detail .person-image-birth .birth h3 {
@@ -85,9 +85,15 @@
   .full-detail .person-detail .person-image-birth .birth h5 span {
     font-size: 0.8rem;
   }
+}
 
+@media screen and (max-width: 786px) {
+  .full-detail .person-detail {
+    padding: 1rem;
+  }
   .full-detail .person-detail .bio h4 {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    line-height: 1.6rem;
   }
 }
 
