--- a/client/src/components/Cast/Cast.css
+++ b/client/src/components/Cast/Cast.css
@@ -43,13 +43,13 @@
     padding-left: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
   }
 
   .cast-div h3 {
     font-size: 1rem;
-    margin-left: 3rem;
+    margin-left: 1rem;
+    text-align: start;
   }
 
   .cast-div .section-center {
