--- a/client/src/pages/Movie/Movie.css
+++ b/client/src/pages/Movie/Movie.css
@@ -29,7 +29,7 @@
 .hrlineBlack {
   width: 10vw;
   margin: 0 auto;
-  border-bottom: 1px solid rgb(90, 90, 90);
+  border-bottom: 2px solid rgb(90, 90, 90);
   margin-bottom: 1rem;
   border-radius: 50px;
 }
@@ -37,7 +37,7 @@
 .hrlineWhite {
   width: 10vw;
   margin: 0 auto;
-  border-bottom: 1px solid #fff;
+  border-bottom: 2px solid #fff;
   margin-bottom: 1rem;
   border-radius: 50px;
 }
@@ -140,7 +140,7 @@
     width: 100vw;
     margin-bottom: 1rem;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
   }
 }
