--- a/client/src/pages/Movie/Movie.css
+++ b/client/src/pages/Movie/Movie.css
@@ -140,7 +140,7 @@
     width: 100vw;
     margin-bottom: 1rem;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
   }
 }
