--- a/client/src/components/PersonDetail/PersonDetail.css
+++ b/client/src/components/PersonDetail/PersonDetail.css
@@ -91,8 +91,10 @@
   .full-detail .person-detail {
     padding: 1rem;
   }
+
   .full-detail .person-detail .bio h4 {
     font-size: 0.9rem;
+    font-weight: 400;
     line-height: 1.6rem;
   }
 }
