--- a/client/src/components/Person/Person.css
+++ b/client/src/components/Person/Person.css
@@ -1,69 +1,94 @@
-.card {
+.actor-img-name {
   position: relative;
+  margin: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  box-shadow: 1px 1px 5px #000;
   width: 250px;
   height: 320px;
-  margin: 0.2rem;
   margin-bottom: 1rem;
+}
+
+.actor-img-name .person-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 3px;
+  padding: 0.2rem;
 }
 
-.card .content {
+.actor-img-name .character-name {
   position: absolute;
+  top: 0rem;
+  left: 0rem;
   width: 100%;
   height: 100%;
-  transform-style: preserve-3d;
-  transition: all 0.5s ease;
-}
-
-.card .content:hover {
-  transform: rotateY(180deg);
-}
-
-.card .content .front {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.card .content .back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  transform: rotateY(180deg);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-}
-
-.card .content .back p {
-  font-size: 0.8rem;
-  padding: 0.1rem 0.3rem;
-  border-radius: 3px;
-  cursor: pointer;
-  font-weight: bold;
-  font-weight: bold;
-}
-
-.person-img {
-  width: 100%;
-  height: 100%;
-  padding: 0.5rem;
-  object-fit: cover;
+  border-radius: 0 0 3px 3px;
+  letter-spacing: 2px;
+  transform: translateY(-110%);
+  transition: transform 0.3s ease;
   border-radius: 3px;
 }
 
-.card .content .back h4,
-.card .content .back h5 {
+.actor-img-name .character-name h4 {
+  line-height: 1.2rem;
   margin: 0;
-  font-weight: 500;
 }
 
-.per .darkCastBg {
+.actor-img-name .character-name p {
+  cursor: pointer;
+  padding: 0.1rem 0.4rem;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
+.actor-img-name .character-name h5 {
+  margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .actor-img-name {
+    width: 200px;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  .actor-img-name {
+    width: 200px;
+    height: 250px;
+  }
+
+  .actor-img-name .character-name {
+    padding: 0.5rem;
+  }
+
+  .actor-img-name .character-name h4,
+  .actor-img-name .character-name h5 {
+    font-weight: 500;
+  }
+
+  .person-img {
+    padding: 0.2rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .actor-img-name {
+    width: 150px;
+    height: 200px;
+    margin: 0 0.2rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.darkCastBg {
   background: #001124;
   color: #fff;
 }
@@ -81,38 +106,4 @@
 .lightBio {
   background: #fff;
   color: rgb(13, 37, 63);
-}
-
-@media screen and (max-width: 1024px) {
-  .card {
-    width: 200px;
-    height: 250px;
-  }
-}
-
-@media screen and (max-width: 786px) {
-  .card {
-    width: 200px;
-    height: 250px;
-  }
-
-  .card .content .back {
-    padding: 0.5rem;
-  }
-
-  .card .content .back h4,
-  .card .content .back h5 {
-    font-weight: 400;
-  }
-
-  .person-img {
-    padding: 0.2rem;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .card {
-    width: 150px;
-    height: 200px;
-  }
 }
