--- a/client/src/components/Person/Person.css
+++ b/client/src/components/Person/Person.css
@@ -1,6 +1,6 @@
 .actor-img-name {
   position: relative;
-  margin: 0 0.5rem;
+  margin: 0.5rem;
   display: flex;
   flex-direction: column;
   border-radius: 3px;
