--- a/client/src/components/Cast/Cast.css
+++ b/client/src/components/Cast/Cast.css
@@ -27,6 +27,13 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .cast-div {
+    width: 100vw;
+    padding: 1rem 1rem;
+  }
+}
+
 @media screen and (max-width: 786px) {
   .cast-div {
     padding-left: 2rem;
@@ -34,6 +41,7 @@
 
   .cast-div h3 {
     font-size: 1rem;
+    margin-left: -1rem;
   }
 }
 
@@ -48,7 +56,7 @@
 
   .cast-div h3 {
     font-size: 1rem;
-    margin-left: 3rem;
+    margin-left: -0.5rem;
   }
 
   .cast-div .section-center {
