--- a/client/src/components/ImageInfo/ImageInfo.css
+++ b/client/src/components/ImageInfo/ImageInfo.css
@@ -294,6 +294,7 @@
     font-size: 0.8rem;
     margin-top: 0.2rem;
     margin-bottom: 1rem;
+    text-align: start;
   }
 
   .info .img-more-info .img-rating {
