--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -1,22 +1,31 @@
 .pagination {
-  width: 100vw;
   position: fixed;
-  bottom: 0;
+  right: 0rem;
+  bottom: 12rem;
   display: flex;
+}
+
+.pagination .inner {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
-  background: #fff;
+  border: none;
+  padding: 1rem 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 3px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .paginationItem {
   border: none;
-  height: 25px;
-  width: 45px;
+  height: 30px;
+  width: 30px;
   position: relative;
-  margin: 0 5px;
+  margin: 0.5rem;
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 50%;
 }
 
 .paginationItem:hover {
@@ -35,7 +44,7 @@
 .prevNextDark {
   border: none;
   color: #0d253f;
-  margin: 0 10px;
+  margin: 0.5rem;
   cursor: pointer;
   border-radius: 50%;
 }
@@ -45,7 +54,7 @@
   border-radius: 50%;
   border: none;
   color: #fff;
-  margin: 0 10px;
+  margin: 0.5rem;
   cursor: pointer;
 }
 
@@ -67,17 +76,18 @@
   color: #999;
   border-radius: 50%;
   border: none;
-  margin: 0 10px;
+  margin: 5px 10px;
+  margin-top: 0;
 }
 
 .dbg {
-  background: #0d253f;
-  border-bottom: 1px solid #fff;
+  background: rgba(13, 37, 63, 1);
+  box-shadow: 0 0 2px rgb(220, 220, 220);
 }
 
 .lbg {
-  background: #fff;
-  border-bottom: 1px solid #0d253f;
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 0 0 2px #0d253f;
 }
 
 .darkActive {
@@ -105,12 +115,26 @@
 }
 
 @media screen and (max-width: 786px) {
-  .pagination {
-    bottom: 2.9rem;
-  }
 }
 
 @media screen and (max-width: 640px) {
+  .pagination {
+    bottom: 2.9rem;
+    width: 100vw;
+  }
+
+  .pagination .inner {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    padding: 0.2rem;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 2px solid #01b4e4;
+    box-shadow: none;
+  }
+
   .paginationItem {
     height: 25px;
     width: 25px;
