--- a/client/src/components/PersonDetail/PersonDetail.css
+++ b/client/src/components/PersonDetail/PersonDetail.css
@@ -109,15 +109,15 @@
 }
 
 .personBlackBackground {
-  background: rgb(13, 37, 63);
+  background: #001124;
 }
 
 .personWhiteBackground {
-  background: rgb(255, 255, 255);
+  background: rgb(220, 220, 220);
 }
 
 .blackColor {
-  color: rgb(13, 37, 63);
+  color: #001124;
 }
 
 .whiteColor {
