--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -51,7 +51,7 @@
   padding: 2rem;
   text-transform: capitalize;
   letter-spacing: 1px;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(13, 37, 63);
   color: #fff;
   border-radius: 3px;
   border-top: 5px solid #90cea1;
