--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgb(13, 37, 63);
+  background: #001124;
 }
 
 .main .title h1 {
@@ -23,7 +23,7 @@
   padding: 2rem;
   text-transform: capitalize;
   letter-spacing: 1px;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(13, 37, 63);
   border-radius: 3px;
   border-top: 5px solid #90cea1;
 }
