--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -128,6 +128,7 @@
 
 .header .name-mode-menu .mode-menu p:hover {
   transform: scale(1.1);
+  /*text-shadow: 0px 0px 10px #01b4e4;*/
   transition: all 0.3s ease;
 }
 
@@ -157,10 +158,14 @@
 
 .headerWhiteBg {
   background: rgba(255, 255, 255, 0.95);
+  /*background: linear-gradient(to right, #fff, rgb(220, 220, 220));
+  box-shadow: 0 0 2px #01b4e4;*/
 }
 
 .headerBlackBg {
   background: rgba(13, 37, 63, 0.95);
+  /*background: linear-gradient(to right, rgb(13, 37, 63), #001124);
+  box-shadow: 0 0 2px #01b4e4;*/
 }
 
 .headerBlackColor {
