--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -142,18 +142,22 @@
 
 .backBlackBackground {
   background: rgba(13, 37, 63, 0.9);
+  background: rgba(0, 17, 36, 0.9);
 }
 
 .backWhiteBackground {
   background: rgba(255, 255, 255, 0.9);
+  background: rgba(220, 220, 220, 0.9);
 }
 
 .menuBlackBackground {
   background: rgb(13, 37, 63);
+  background: #001124;
 }
 
 .menuWhiteBackground {
   background: rgb(255, 255, 255);
+  background: rgb(220, 220, 220);
 }
 
 .headerWhiteBg {
