--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -117,6 +117,15 @@
   justify-content: center;
 }
 
+.header .name-mode-menu .mode-menu .head-filter {
+  display: flex;
+  align-items: center;
+}
+
+.header .name-mode-menu .mode-menu .head-filter i {
+  margin-right: 0.5rem;
+}
+
 .header .name-mode-menu .mode-menu p {
   margin: 0;
   cursor: pointer;
